# video-person-cut

./: .gitignore  clip_search.py  cutter.py  detector.py  editor.py  main.py  pyproject.toml  transcriber.py
